--- a/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Bolivia_l_english.yml
@@ -310,7 +310,7 @@ bol.1.a:0 "좋든 안 좋든, ¡볼리비아 만세!"
 bol.2.t:0 "1940년 선거"
 bol.2.d:0 "볼리비아는 지난 몇 년 동안 큰 어려움을 겪었으며, 비록 부시 행정부가 많은 것을 이루지는 못했지만, 그는 국가를 함께 유지할 수 있었고 1940년 선거를 진행시킬 수 있게 해주었습니다. 우리 역사상 처음으로 생디칼리스트가 참여하도록 허용되었고 훌륭한 경쟁자가 되고 있기 때문에 긴장감이 고조되고 있습니다."
 bol.2.a:0 "알시데스 아르구에데스"
-bol.2.b:0 "엔리케 헐트조그"
+bol.2.b:0 "엔리케 헤르조그"
 bol.2.c:0 "빅토르 파즈 에스텐소로"
 bol.2.e:0 "호세 안토니오 아르제 이 아르제"
 
