--- a/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Sweden_l_english.yml
@@ -25,6 +25,7 @@ SWE_holmquist_army_defence:0 "홀름퀴스트 육군"
 SWE_holmquist_army_offense:0 "홀름퀴스트 육군"
 SWE_douglas_army_idea:0 "더글라스 육군"
 SWE_douglas_army_1:0 "더글라스 육군"
+SWE_douglas_army_2:0 "더글라스 육군"
 SWE_douglas_army_defence:0 "더글라스 육군"
 SWE_douglas_army_offense:0 "더글라스 육군"
 
@@ -70,26 +71,26 @@ SWE_foa_focus:0 "FOA 설립"
 SWE_ab_atomenergi:0 "스웨덴 라인"
 
 SWE_forsvarsbeslutet_1936:0 "Försvarsbeslutet 1936"
-SWE_holmquist_plan:0 "Holmquist - Modern Infantry"
-SWE_ski_infantry:0 "Ski Infantry"
+SWE_holmquist_plan:0 "홀름퀴스트 - 현대보병"
+SWE_ski_infantry:0 "스키 보병"
 SWE_modern_jagers:0 "Arméns Jägarskola"
-SWE_modern_artillery:0 "Royal Swedish Artillery"
+SWE_modern_artillery:0 "스웨덴 왕립 포병"
 SWE_ag_42:0 "Ljungman AG-42"
 SWE_modern_caroleans:0 "20th Century Caroleans"
 SWE_douglas_plan:0 "Douglas - Manoeuvre Warfare"
 SWE_domestic_designs:0 "Stridsvagn M/41"
 SWE_landsverk_focus:0 "AB Landsverk"
 SWE_pansartrupperna:0 "Pansartrupperna"
-SWE_blixtkrieg:0 "The 'Blixtkrieg' Doctrine"
-SWE_integrated_support:0 "Integrated Support"
-SWE_national_defence:0 "National Defence"
+SWE_blixtkrieg:0 "전격전 전술"
+SWE_integrated_support:0 "통합된 지원"
+SWE_national_defence:0 "국가 방위"
 SWE_aggressive_army:0 "Legacy of Carolus Rex"
 
-SWE_old_naval_construction:0 "Old Naval Construction"
-SWE_old_naval_construction_desc:0 "Restart and finish the old ships."
-SWE_naval_doctrines:0 "Modern Naval Tactics"
-SWE_baltic_submarines:0 "Wolves of the Baltic"
-SWE_modern_fighter:0 "The J-8 Fighter"
+SWE_old_naval_construction:0 "구 해군 개발"
+SWE_old_naval_construction_desc:0 "새로운 출발과 함께 오래된 함선을 퇴역시킵니다."
+SWE_naval_doctrines:0 "현대 해군 전술"
+SWE_baltic_submarines:0 "발틱해의 늑대"
+SWE_modern_fighter:0 "J-8 전투기"
 SWE_air_bases:0 "Flygbassystem 40"
 SWE_air_reserve:0 "Swedish Fighter Reserve"
 SWE_military_summit:0 "The Air Force Summit"
@@ -100,14 +101,14 @@ SWE_hms_karl_xii:0 "HMS Karl XII"
 SWE_naval_college:0 "Kungliga Sjökrigsskolan"
 SWE_destroyers:0 "Mode-Class Destroyers"
 SWE_marines_focus:0 "Amfibiekåren"
-SWE_airforce_supremacy:0 "Air Force Supremacy"
+SWE_airforce_supremacy:0 "공군 우세"
 SWE_fighter_1:0 "FFVS J-22"
 SWE_saab_focus:0 "Svenska Aeroplan AB"
-SWE_tac_nav:0 "Flexible Airpower"
-SWE_fighter_2:0 "Modern Fighters"
+SWE_tac_nav:0 "유연한 공군력"
+SWE_fighter_2:0 "현대 전투기"
 SWE_air_academy:0 "Kungliga Flygkrigshögskolan"
 SWE_airborne_focus:0 "Fallskärmsjägarna"
-SWE_radar_jet_focus:0 "RADAR and Jets"
+SWE_radar_jet_focus:0 "레이더와 제트기"
 
 SWE_DEM_treaty_of_stockholm:0 "Ratify the Treaty of Stockholm"
 SWE_DEM_nordic_council:0 "Establish the Nordic Council"
@@ -116,13 +117,13 @@ SWE_DEM_material_cooperation:0 "Joint Military Acquisition"
 SWE_DEM_military_volunteers:0 "Military Exchange Programme"
 SWE_DEM_passport_union:0 "Nordic Passport Convention"
 SWE_DEM_joint_sessions:0 "Parliamentary Joint Sessions"
-SWE_DEM_investments:0 "Nordic Investments"
-SWE_DEM_monetary_union:0 "Scandinavian Monetary Union"
-SWE_DEM_found_sas:0 "Found Scandinavian Airlines"
-SWE_DEM_custom_union:0 "Propose a Single Market"
-SWE_DEM_common_tech:0 "Scandinavian Scientist Conference"
-SWE_DEM_common_tech_2:0 "Technological Cooperation"
-SWE_DEM_form_federation:0 "The Nordic Federation"
+SWE_DEM_investments:0 "북유럽 투자"
+SWE_DEM_monetary_union:0 "스칸디나비아 화폐 통합"
+SWE_DEM_found_sas:0 "스칸디나비아 에어라인 창설"
+SWE_DEM_custom_union:0 "단일 시장 제안"
+SWE_DEM_common_tech:0 "스칸디나비아 과학 회의"
+SWE_DEM_common_tech_2:0 "기술 협력"
+SWE_DEM_form_federation:0 "북유럽 연방"
 
 ### Parties ###
 SWE_totalist_party:0 "VPT"
