--- a/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
@@ -1,26 +1,26 @@
 l_english:
 
 ### Ideas ###
-CHL_airmanufactury:0 "Aerial Production"
-CHL_airmanufactury_desc:0 "With help from experienced foreigners, we will modernise our airforce up to modern standards"
-CHL_tankmanufactury:0 "Tank Production Effort"
-CHL_tankmanufactury_desc:0 "Producing tanks at home is an expensive endeavour, and we make sure our efforts are not wasted. Foreign experts have arrived and our factories are ready"
-CHL_south_prussia1_desc:0 "The strict discipline of the Chilean military meant our nation was virtually undefeated since it's birth, with no doubt thanks to army professionalism and our brave spirit"
-CHL_south_prussia1:0 "Strict Discipline Standards"
-CHL_south_prussia2_desc:0 "The strict discipline of the Chilean military meant our nation was virtually undefeated since it's birth, with no doubt thanks to army professionalism and our brave spirit"
-CHL_south_prussia2:0 "Full Prussian Ethos"
-CHL_workers_ofthe_homefront:0 "Soldiers of the Homefront"
-CHL_workers_ofthe_homefront_desc:0 "What our nation lacks in numbers, it pays off in spirit; by doing away with conservative values and making use of our full population, not just half of it, we can ensure both an advance for women's rights and a substantial strategic asset"
-CHL_MapuchesRevolt:0 "Mapuches Revolt"
-CHL_MapuchesRevolt_desc:0 "The Mapuches continue to attack us with low level guerilla warfare, it will take some time to be rid of them"
-CHL_Private_Enterprise1:0 "Private Enterprise Restored"
-CHL_Private_Enterprise1_desc:0 "Our early efforts to privatise enterprises are paying off"
-CHL_Private_Enterprise2:0 "Restored Private Land Ownership"
-CHL_Private_Enterprise2_desc:0 "Restoring land ownership has allowed our government to access more resources because of better organisation"
-CHL_Democratic_Institutuions1:0 "Democratic Institutions"
-CHL_Democratic_Institutuions1_desc:0 "These institutions stengthen our ability to pass laws and pave the way for the transition to a democratic government"
-CHL_Democratic_Institutuions2:0 "Strengthened Institutions"
-CHL_Democratic_Institutuions2_desc:0 "Our nation now has a thriving democratic spirit thanks to our expansion of the democratic instituions"
+CHL_airmanufactury:0 "항공기 생산"
+CHL_airmanufactury_desc:0 "우리는 숙련된 외국인들의 도움을 받아 우리의 공군력을 현대적 기준에 맞게 현대화할 것입니다."
+CHL_tankmanufactury:0 "전차 생산 노력"
+CHL_tankmanufactury_desc:0 "집에서 탱크를 만드는 것은 값비싼 노력이며, 우리는 우리의 노력이 헛되지 않도록 할 것입니다. 외국 전문가들이 도착했으며 공장들은 준비되었습니다."
+CHL_south_prussia1_desc:0 "칠레 군대의 엄격한 규율은 군대의 전문성과 우리의 용기 덕분에 탄생 이후 우리나라가 사실상 무패라는 것을 의미했습니다."
+CHL_south_prussia1:0 "엄격한 규율 표준"
+CHL_south_prussia2_desc:0 "칠레 군대의 엄격한 규율은 군대의 전문성과 우리의 용기 덕분에 탄생 이후 우리나라가 사실상 무패라는 것을 의미했습니다."
+CHL_south_prussia2:0 "완전한 프로이센 기풍"
+CHL_workers_ofthe_homefront:0 "국내 전선의 병사들"
+CHL_workers_ofthe_homefront_desc:0 "우리 나라의 인구가 부족하니, 정신적으로 이득을 봐야 합니다. 보수적 가치를 없애고 인구의 반만이 아닌 전체 인구를 이용함으로써, 우리는 여성의 권리와 실질적인 전략적 자산을 확보할 수 있습니다."
+CHL_MapuchesRevolt:0 "마푸체 족의 저항"
+CHL_MapuchesRevolt_desc:0 "마푸치족이 낮은 수준의 게릴라전을 계속하며 우리를 공격하고 있습니다. 그들을 제거하는 데는 시간이 걸릴 것입니다."
+CHL_Private_Enterprise1:0 "사기업 복원"
+CHL_Private_Enterprise1_desc:0 "기업을 민영화하려는 우리의 초기 노력이 성과를 내고 있습니다."
+CHL_Private_Enterprise2:0 "사유지 소유권 복원"
+CHL_Private_Enterprise2_desc:0 "토지 소유권을 복원하면서 체계성이 향상됐으며, 우리 정부는 더 많은 자원에 접근할 수 있게 되었습니다."
+CHL_Democratic_Institutuions1:0 "민주적인 기관"
+CHL_Democratic_Institutuions1_desc:0 "이러한 기관들은 법을 통과시키고 민주 정부로의 전환을 위한 길을 닦는 우리의 능력을 강화합니다."
+CHL_Democratic_Institutuions2:0 "강화된 기관"
+CHL_Democratic_Institutuions2_desc:0 "우리나라는 민주적인 기관의 확장 덕분에 이제 번영하는 민주주의 정신을 갖게 되었습니다."
 CHL_Emergency_Aid:0 "Emergency Aid"
 CHL_Emergency_Aid_desc:0 "Foreign Capital and aid is helping to jumpstart our new economy"
 CHL_Economics:0 "Capitalist Economics"
@@ -61,109 +61,109 @@ CHL_social_democrat_party:0 "PC-PSC"
 CHL_social_democrat_party_long:0 "Pacto de Calais"
 CHL_social_conservative_party:0 "APL"
 CHL_social_conservative_party_long:0 "Alianza Popular Libertadora"
-CHL_authoritarian_democrat_party:0 "AR"
-CHL_authoritarian_democrat_party_long:0 "Acción Republicana"
-CHL_paternal_autocrat_party:0 "PRR"
-CHL_paternal_autocrat_party_long:0 "Partido Republicano Radical"
+CHL_authoritarian_democrat_party:0 "공화운동"
+CHL_authoritarian_democrat_party_long:0 "공화운동"
+CHL_paternal_autocrat_party:0 "급진공화당"
+CHL_paternal_autocrat_party_long:0 "급진공화당"
 CHL_national_populist_party:0 "COCEAT"
 CHL_national_populist_party_long:0 "Comité de Oficiales Contra El Ateismo y Traidores"
-CHL_social_liberal_party:0 "PL"
-CHL_social_liberal_party_long:0 "Partido Liberal"
-CHL_market_liberal_party:0 "PR"
-CHL_market_liberal_party_long:0 "Partido Radical"
-CHL_radical_socialist_party:0 "ASN-PSC"
-CHL_radical_socialist_party_long:0 "Alianza Socialista Nacional"
-CHL_syndicalist_party:0 "PSC"
-CHL_syndicalist_party_long:0 "Partido Sindicalista Chileno"
-CHL_totalist_party:0 "PRP-PSC"
-CHL_totalist_party_long:0 "Partido Revolucionario Permanente"
+CHL_social_liberal_party:0 "자유당"
+CHL_social_liberal_party_long:0 "자유당"
+CHL_market_liberal_party:0 "급진당"
+CHL_market_liberal_party_long:0 "급진당"
+CHL_radical_socialist_party:0 "민족사회주의연합"
+CHL_radical_socialist_party_long:0 "민족사회주의연합"
+CHL_syndicalist_party:0 "칠레 생디칼리즘당"
+CHL_syndicalist_party_long:0 "칠레 생디칼리즘당"
+CHL_totalist_party:0 "영구혁명당"
+CHL_totalist_party_long:0 "영구혁명당"
 
 ### Focuses ###
 CHL_air:0 "Update Airforce Philosophy"
 CHL_air_desc:0 "Our air doctrines are still a relic of the time of early aviation, and what was once cutting edge now belongs in a museum. Our pilots and planning will be updated accordingly"
-CHL_air2:0 "Aerial Production"
+CHL_air2:0 "항공기 생산"
 CHL_air2_desc:0 "The sudden cut of funding for the airforce is perhaps a key factor why it joined us in the Revolution; now we should take the utmost care to ensure that our airplanes are both modern and well cared for. Thankfully, we have comrades from the Union of Britain who can me most helpful in this endeavour"
-CHL_fighter:0 "Fighter Effort"
-CHL_fighter2:0 "Close Air Support Craft" #CAS
-CHL_fighter3:0 "Long Range Aircraft Experiments" #long range aircraft
+CHL_fighter:0 "전투기에 진중"
+CHL_fighter2:0 "근접지원항공기 기술" #CAS
+CHL_fighter3:0 "장거리 항공기 실험" #long range aircraft
 CHL_fighter_desc:0 "Aerial supremacy is key in modern war, of that few can doubt; But the advent of new mechanisms of war means that our old biplanes are not suitable for defending the skies of Chile anymore"
 CHL_fighter2_desc:0 "Air superiority could be meaningless if we cannot capitalise in help for our troops on the frontlines; not only special aircraft is required, but specific training too"
 CHL_fighter3_desc:0 "Our country is, from an strategical standpoint, too long in a North-South axis to be properly protected by common fighter craft. We must ensure, with the help of our comrades in Europe, that our Airforce has planes capable of long autonomous flights"
-CHL_airdoc:0 "Aerial Strategy"
+CHL_airdoc:0 "공중 전략"
 CHL_airdoc2_desc:0 "The engagements themselves are also to be analysed, and our few planes cannot be foolishly thrown away. Careful studying and manoeuvres will be key in our coming victory"
 CHL_airdoc_desc:0 "Aerial engagements are quick and brutal affairs; and it pays to plan for them and strategic missions beforehand. What will be the focus of our airforce in the war to come, our general staff must decide"
-CHL_airdoc2:0 "Aerial Tactics"
-CHL_bomber:0 "Bomber Effort"
+CHL_airdoc2:0 "공중 전술"
+CHL_bomber:0 "폭격기에 집중"
 CHL_bomber_desc:0 "The role of a bomber craft is somewhat new, but it's uses were made apparent many times. In order to make sure we can defend the fatherland, our Weltkrieg era models will have to be replaced"
-CHL_bomber2:0 "Modern Bomber Craft"
+CHL_bomber2:0 "현대 폭격기 기술"
 CHL_bomber2_desc:0 "Not only as to make Bombers an active, modernise part of our airforce, but to also make sure they are up to date, we will continue investing on different, role based Bomber Craft!"
-CHL_navy:0 "Sovereign of the Pacific"
+CHL_navy:0 "태평양의 군주"
 CHL_navy_desc:0 "Our fleet, with it's recent additions and investments in the term of Chariman Puga, is perhaps the most powerful in South America; it is most certainly the most well armed fighting force of the South Pacific, and well capable of both defensive and offensive operations"
-CHL_highseas:0 "A High Seas Navy"
+CHL_highseas:0 "공해 해군"
 CHL_highseas_desc:0 "The decisive battles of the wars to come will be fought on deep waters, away from coastal support. In order to make sure our navy is ready for this crucial engagement against a certain undisclosed enemy to the West, we will make drills, exercises and planning efforts"
-CHL_dockyard:0 "Fleet Renewal"
+CHL_dockyard:0 "함대 재개장"
 CHL_dockyard_desc:0 "Our fleet, while well armed and well supplied, has many second hand or outdated vessels; If we are to modernise it, we must spare no expense in dockyards, shipyards and weapon systems"
-CHL_carry2:0 "Aircraft Carrier Effort"
+CHL_carry2:0 "항공모함에 집중"
 CHL_carry2_desc:0 "Many experts believe in the importance of Aircraft carriers in a naval engagement; this is especially true in our republic, given how a great many influential staff members have an airforce background. While monumentally expensive, a modern aircraft carrier might mean the difference between victory and defeat"
-CHL_cafi:0 "Naval Strike Aircraft"
+CHL_cafi:0 "뇌격기"
 CHL_cafi_desc:0 "Naval Aircraft has always been a key factor of national defence; most of our important military centres are within range of naval artillery. It's a matter of the utmost importance, to ensure we can defend our coastline from foreign aggression"
-CHL_hc:0 "Cruiser Breakthroughs"
+CHL_hc:0 "순양함 돌파"
 CHL_hc_desc:0 "Cruisers are a mainstay of our navy, but they are all of outdated models and specifications, despite out buildup efforts. Technological improvements are in order"
-CHL_bc:0 "Additional Shipyard Investments"
+CHL_bc:0 "추가적인 조선소 투자"
 CHL_bc_desc:0 "A powerful navy cannot be maintained by relying on foreign shipyards. Our docks will be upgraded to modern standards, with some help from our Comrades from Europe"
-CHL_bb:0 "Commission more Battleships"
+CHL_bb:0 "더 많은 전함을 주문"
 CHL_bb_desc:0 "The Almirante Latorre class battleship is a fine vessel, but one that shows it's age, even with the small upgrades we outfitted. We will likely require a new flagship to ensure our national security"
-CHL_highseas2:0 "Blue Water Navy"
+CHL_highseas2:0 "대양해군"
 CHL_highseas2_desc:0 "Even more emphasis on Deep Water tactics, doctrines and manoeuvres will be required if our navy is to have against chance against it's enemies. Patrice makes perfect"
-CHL_sub:0 "Submarine Ventures"
+CHL_sub:0 "잠수함 모험"
 CHL_sub_desc:0 "Our current submarine fleet is small and outdated, and thus we require more recent, well armed models to keep imperialist navies at their toes"
-CHL_des:0 "Anti Submarine Effort"
+CHL_des:0 "대잠에 집중"
 CHL_des_desc:0 "Our efforts to hunt down enemy submarines may end fruitless if our smaller ships are not modern enough, putting both our flagships and our shipping lanes at risk. We must not allow that to happen"
-CHL_ls:0 "Commerce Raiders"
+CHL_ls:0 "상선 약탈자"
 CHL_ls_desc:0 "Even if our navy is among the most powerful of the South, imperialist forces from Germany, the United States and Argentina could possibly make us have to rely on asymmetrical naval warfare, in order to compensate for our lack of tonnage and manpower."
-CHL_arms_of_the_revolution:0 "A Nation Under Siege"
+CHL_arms_of_the_revolution:0 "포위당한 국가"
 CHL_arms_of_the_revolution_desc:0 "The biggest danger to Chile is not internal, but that of the resurrecting counter-revolutionary Argentina. They do little to hide their ambitions on our territory since the birth of their nation in the 1800s, and now, emboldened by Brazilian incompetence, wish to see Chile conquered. We will not let happen!"
-CHL_mobility_potential:0 "Mobility Potential"
+CHL_mobility_potential:0 "잠재적인 기동성"
 CHL_mobility_potential_desc:0 "Many have heard ideas and plans about how modern warfare will be a fast-paced, mechanised affair; even if that may not turn out to be the case, we do not have the manpower to engage in traditional war with Argentina and the other imperialists. We will do our best to improve the mobility of our forces"
-CHL_communard_expertise:0 "Communard Expertise"
+CHL_communard_expertise:0 "코뮌 전문가"
 CHL_communard_expertise_desc:0 "France's doctrine of aggression has many strong proponents, and they may be of great use to our cause, especially since among them are advisers and officers who are eager to be on the frontlines of the war against imperialism"
-CHL_tanque:0 "Tank Effort"
+CHL_tanque:0 "전차에 집중"
 CHL_tanque_desc:0 "Our military requires not only tanks, but tanks that are modern, autonomous and can deal with the harsh terrain of our homeland. Advanced war machinery may mean the difference between victory and defeat"
-CHL_tanque2:0 "Tank Production Effort"
+CHL_tanque2:0 "전차 생산에 집중"
 CHL_tanque2_desc:0 "We cannot mechanise our forces properly with simple imports; we must ensure our factories can supply our armed forces by themselves, for we cannot depend on other nations on such vital matters"
-CHL_infantry:0 "Army Rearmament"
+CHL_infantry:0 "군대 재무장"
 CHL_infantry_desc:0 "While the army is not underpaid or underfed as it used to be before the Revolution, it is still poorly equipped. Let us attend to the needs of our officers and ensure our Army can fight off any threats"
 CHL_art:0 "Ordinance Updates"
 CHL_art_desc:0 "Our artillery is in dire need of renewal; the battlefields of the Weltkrieg standing as witnesses. Only with newer models we can stand a chance against the Aggressor to the West"
-CHL_infeq2:0 "Modern Military Equipment"
+CHL_infeq2:0 "현대 군사장비"
 CHL_infeq2_desc:0 "Despite our efforts, the equipment in our military is not entirely up to modern standards. Our officers will require more spending and attention from our government, but the vanguard of the revolution deserves only the best!"
-CHL_arty2:0 "Firepower Effort"
+CHL_arty2:0 "화력에 집중"
 CHL_arty2_desc:0 "We indeed require more accurate, well armed artillery pieces if we are to ensure the survival of our nation. Now, specialised guns, we will be able to rain fire upon the enemy!"
-CHL_high_command:0 "High Command Reforms"
+CHL_high_command:0 "최고 사령부 개혁"
 CHL_high_command_desc:0 "Our military high command is in need of a shakeup, and the counter-revolutionaries will not wait for our tactics and strategies to update before attacking us!"
-CHL_mountaineers:0 "Mountaineer Brigade Expansion"
+CHL_mountaineers:0 "산악 여단 확장"
 CHL_mountaineers_desc:0 "The Mountains that surround us are an integral part of any national defence plan in case of invasion. Passes, peaks and hillsides must not be garrisoned with fresh recruits, but with elite specially trained regiments who are ready for the harsh reality of mountain life"
-CHL_andean_strategy:0 "Andean Strategy"
+CHL_andean_strategy:0 "안데스 전략"
 CHL_andean_strategy_desc:0 "The so called Santiago Line will be the last stand of our nation, if Argentina overpowers us and crossed the Andes. The rough terrain near and around Santiago will be made impenetrable to foreign invaders, which will allow us to resist even the harshest numerical disadvantage"
-CHL_long_term_planning:0 "Long Term Planning"
+CHL_long_term_planning:0 "장기간 계획"
 CHL_long_term_planning_desc:0 "Not only battles and combat engagements are important, but the very movement and organisation of both our forces and that of our enemies will be thoroughly studied, and prepare our general staff for the challenge of the coming War of Imperialism"
-CHL_strategic_mining:0 "Strategic Mining"
+CHL_strategic_mining:0 "전략적 채굴"
 CHL_strategic_mining_desc:0 "Let us open new mines to sustain our military production, for the riches of Chile must be used to safeguard it's safety"
-CHL_doctrine_offense:0 "Offensive Doctrine"
+CHL_doctrine_offense:0 "공격적인 교리"
 CHL_doctrine_offense_desc:0 "We will ensure our forces and general staff are ready to go on the offensive against our enemies. Regimental pride can only go so far, strategy and planning will ensure our final victory!"
-CHL_miltarism:0 "Military Supremacy"
+CHL_miltarism:0 "군대지상주의"
 CHL_miltarism_desc:0 "Increased salaries, rations and benefits not only ensure the loyalty of the military, but make it so our forces are well equipped for the future struggles ahead"
-CHL_drilled_military:0 "Renew Strict Drill Standards"
+CHL_drilled_military:0 "엄격한 훈련 표준을 강조"
 CHL_drilled_military_desc:0 "Chile's military was once known as the 'South Prussia', and its performance and discipline were the envy of all. Now, with it's role as the vanguard of the people fulfilled, it can turn it's gaze upon those would hurt our countrymen, and the ideas we stand for"
-CHL_the_third_chairman:0 "The Third Chairman"
+CHL_the_third_chairman:0 "세번째 의장"
 CHL_the_third_chairman_desc:0 "After Marmaduke Grove's defence focused term ends, who will become the Third Chairman?"
-CHL_total:0 "Labarca and the Totalist Faction"
+CHL_total:0 "라바르카와 전체주의파"
 CHL_total_desc:0 "Labarca and the Mosleyists know that only a strong government can keep Chile safe against it's many enemies. The people now are safe!"
-CHL_permanet:0 "Permanent Revolution Doctrine"
+CHL_permanet:0 "영구적인 혁명 교리"
 CHL_permanet_desc:0 "Something that Labarcists defend, the idea that the Revolution can only be maintained by force, for reactionary elements cannot be reasoned or bargained with. The Proletarian Dictatorship will be permanent until it's not longer necessary"
-CHL_directrule:0 "Centralised Planning"
+CHL_directrule:0 "중앙화된 계획"
 CHL_directrule_desc:0 "All decisions about he economic and state well being must be consulted with Central Committees in Santiago. To do otherwise would be clumsy at best, treason at worse"
-CHL_chairmanmega:0 "Extend Chairman's Powers"
+CHL_chairmanmega:0 "의장의 권력을 확대"
 CHL_chairmanmega_desc:0 "The Chairman still requires approval from the Syndicalist Congress for many actions, something that greatly cripples the capacity of our state to react. We must change this!"
 CHL_commisariats:0 "Revolutionary Commissars"
 CHL_commisariats_desc:0 "Now, we can have appointed officers in army units and factories, ensuring both loyalty and hard work at all times, for an idle mind is an invitation to counter-revolution"
