--- a/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Chile_l_english.yml
@@ -12,7 +12,7 @@ CHL_south_prussia2:0 "완전한 프로이센 기풍"
 CHL_workers_ofthe_homefront:0 "국내 전선의 병사들"
 CHL_workers_ofthe_homefront_desc:0 "우리 나라의 인구가 부족하니, 정신적으로 이득을 봐야 합니다. 보수적 가치를 없애고 인구의 반만이 아닌 전체 인구를 이용함으로써, 우리는 여성의 권리와 실질적인 전략적 자산을 확보할 수 있습니다."
 CHL_MapuchesRevolt:0 "마푸체 족의 저항"
-CHL_MapuchesRevolt_desc:0 "마푸치족이 낮은 수준의 게릴라전을 계속하며 우리를 공격하고 있습니다. 그들을 제거하는 데는 시간이 걸릴 것입니다."
+CHL_MapuchesRevolt_desc:0 "마푸체 족이 낮은 수준의 게릴라전을 계속하며 우리를 공격하고 있습니다. 그들을 제거하는 데는 시간이 걸릴 것입니다."
 CHL_Private_Enterprise1:0 "사기업 복원"
 CHL_Private_Enterprise1_desc:0 "기업을 민영화하려는 우리의 초기 노력이 성과를 내고 있습니다."
 CHL_Private_Enterprise2:0 "사유지 소유권 복원"
@@ -337,7 +337,7 @@ chl.2.a:0 "Clotario Blest Riffo and the Orthodox Syndicalists"
 chl.2.b:0 "Salvador Allende and the Social Coalition"
 chl.2.c:0 "Carlos Labarca and the Mosleyists"
 chl.3.t:0 "1936년 칠레"
-chl.3.d:0 "1879년부터 1883년까지의 초석 전쟁으로 칠레는 페루에서 타라파카와 아리카 지역을 가져왔을 뿐만 아니라 볼리비아의 해안지역인 안토파가스타를 획득하였으며, 그 후 거대한 구리 광산을 지배하고 초석의 세계 무역을 독점했습니다. 경제 번영이 시작되었으며, 이는 세계 대전 초기에 초석의 수요가 높았기에 계속되었습니다. 하지만, 그 전쟁 동안 인공적으로 초석을 생산하기 위해 고안된 화학 공정으로 칠레의 퇴적물은 쓸모가 없어졌습니다. 인구 증가와 함께 경제 상황이 악화되면서 사회 위기가 증가했습니다. 노동자와 노동조합은 특히 1931년 칠레가 파산한 후 카를로스 이바녜스 델 캄포의 비참한 통치 하에서 정치적 영향력을 얻었습니다. 얼마 지나지 않아 이바녜스는 물러났고 해군과 대부분의 공군이 반란을 일으켰으며, 인민들의 지지와 오랜기간 동안 망명했던 마르마두케 그로베가 브리튼 연방에서 이끌어 온 증원의 도착과 함께, 칠레 생디칼리즘 공화국이 선언되었습니다. 최소한 명목상으로는 아르투로 푸가가 이끈 1대 의회 하에서의 5년간의 재건 후, 공화국 경제는 크게 회복되었고, 군사적인 축적이 시작되었습니다. 아르헨티나의 수사가 점점 공격적으로 바뀌면서, 대양을 가로지르면서 두 혁명을 경험한 베테랑 군인이자 존경받는 마르마두케 그로베가 공화국을 재건하는 데 앞장서고 있습니다. 그러나 모든 칠레 국민들이 생디칼리즘 지도자들만큼 미래에 대해 희망적이지는 않습니다..."
+chl.3.d:0 "1879년부터 1883년까지의 초석 전쟁으로 칠레는 페루에서 타라파카와 아리카 지역을 가져왔을 뿐만 아니라 볼리비아의 해안지역인 안토파가스타를 획득하였으며, 그 후 거대한 구리 광산을 지배하고 초석의 세계 무역을 독점했습니다. 경제 번영이 시작되었으며, 이는 세계 대전 초기에 초석의 수요가 높았기에 계속되었습니다. 하지만, 그 전쟁 동안 인공적으로 초석을 생산하기 위해 고안된 화학 공정으로 칠레의 퇴적물은 쓸모가 없어졌습니다. 인구 증가와 함께 경제 상황이 악화되면서 사회 위기가 증가했습니다. 노동자와 노동조합은 특히 1931년 칠레가 파산한 후 카를로스 이바녜스 델 캄포의 비참한 통치 하에서 정치적 영향력을 얻었습니다. 얼마 지나지 않아 이바녜스는 물러났고 해군과 대부분의 군이 반란을 일으켰으며, 인민들의 지지와 오랜기간 동안 망명했던 마르마두케 그로베가 브리튼 연방에서 이끌어 온 증원의 도착과 함께, 칠레 생디칼리즘 공화국이 선언되었습니다. 최소한 명목상으로는 아르투로 푸가가 이끈 1대 의회 하에서의 5년간의 재건 후, 공화국 경제는 크게 회복되었고, 군사적인 축적이 시작되었습니다. 아르헨티나의 수사가 점점 공격적으로 바뀌면서, 대양을 가로지르면서 두 혁명을 경험한 베테랑 군인이자 존경받는 마르마두케 그로베가 공화국을 재건하는 데 앞장서고 있습니다. 그러나 모든 칠레 국민들이 생디칼리즘 지도자들만큼 미래에 대해 희망적이지는 않습니다..."
 chl.3.a:0 "무엇이든지 간에 생디칼리즘의 빛이 우리를 미래로 이끌 것이다."
 chl.4.t:0 "The Fourth Chairman"
 chl.4.d:0 "After 10 years of a stable government, the people of Chile rejoice at the prosperity and peace the revolution brought. And now comes the time to elect the Fourth Chairman of the Chilean Syndicalist Republic. Three candidates are running the ballot, and 2 of them are respected and well regarded poets and writers. Gabriela Mistral leads the Pacto de Calais, a broad coalition of intellectuals and politicians who defend the Republic's central government, but unlike Carlos Contrera Labarca's Totalists, do see regular elections and personal freedoms as of something of the utmost importance. The Orthodox Syndicalists are led by Pablo Neruda, yet another very accomplished writer and poet. But who will emerge as the dominant party in Chile?"
