--- a/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Russia_l_english.yml
@@ -442,10 +442,10 @@ RUS_reinforce_kornilov:0 "코르닐로프의 권력을 강화"
 RUS_reinforce_kornilov_desc:0 "용맹한 쿠데타 이후, 내전의 베테랑 장군인 코르닐로프는 그 자신을 러시아의 국가 수반으로 만들었습니다. 이제 몇 달이 지났고 코르닐로프는 현재 공화국에 대한 그의 권력을 강화할 수 있는 위치에 서있습니다."
 kornilov_focus_tooltip:0 "§R코르닐로프는 계속해서 군사 독재 정권을 유지할 것입니다.§!\n"
 unlock_kornilov_focus:0 "코르닐로프가 정권을 장악했습니다"
-RUS_vozhd:0 "사빈코프가 새로운 총통이다!"
-RUS_vozhd_desc:0 "라브르 코르닐로프가 사망한 후에, 영향력 있는 수상이자 혁명가인 사빈코프는 공화국에서 권력을 잡고 자신을 러시아의 총통(Vozhd)으로 선언했는데, 총통의 권력은 심지어 옛 차르의 권력보다도 강력합니다. 보리스 사빈코프는 이제 우리 나라의 지도자인 총통입니다."
+RUS_vozhd:0 "사빈코프가 새로운 영도자이다!"
+RUS_vozhd_desc:0 "라브르 코르닐로프가 사망한 후에, 영향력 있는 수상이자 혁명가인 사빈코프는 공화국에서 권력을 잡고 자신을 러시아의 영도자(Vozhd)로 선언했는데, 영도자의 권력은 심지어 옛 차르의 권력보다도 강력합니다. 보리스 사빈코프는 이제 우리 나라의 지도자인 영도자입니다."
 unlock_savinkov_focus:0 "사빈코프가 정부를 이끌고 있으며 코르닐로프는 자신의 직책을 수행할 수 없습니다"
-vozhd_focus_tooltip:0 "§R사빈코프는 공식적으로 공화국의 새로운 총통으로 선포되었습니다.§!\n"
+vozhd_focus_tooltip:0 "§R사빈코프는 공식적으로 공화국의 새로운 영도자로 선포되었습니다.§!\n"
 RUS_MIL_DICT:0 "군사 독재"
 RUS_MIL_DICT_desc:0 "육군은 나약한 자유주의 공화국에 의해 약화된 후에도 러시아에서 항상 안정된 군대였습니다. 그들은 러시아를 보호하기 위해 강력함을 유지해왔습니다. 이제 그들이 러시아를 통제하는 이유는 오로지 정의 뿐입니다. 오직 육군만이 모든 국가적 분쟁에서 자신이 먼저 뛰어들 수 있습니다."
 MIL_DICT_focus_tooltip:0 "§R러시아는 계속해서 군부의 통제를 받습니다!§!\n"
@@ -541,7 +541,7 @@ RUS_ARI_POL4_desc:0 "By now, the Duma holds very little influence compared to th
 
 RUS_WRA_ADM1:0 "페레스트로이카"
 RUS_WRA_ADM1_desc:0 "'페레스트로이카' 또는 '재건축'은 러시아의 산업, 농업, 군수 공업을 재편성하는 것을 목표로 하는 보리스 사빈코프의 새로운 경제 방침입니다. 이는 잘 짜여진 경제 방침에 기초하여, 법적으로 개인의 사업에 더 많은 자유도를 주는 계획이 포함됩니다. 새로운 법안이 우리 경제를 재건하는 데 도움이 될 것입니다."
-RUS_SAVI_HOG:0 "보리스 사빈코프가 총통이다"
+RUS_SAVI_HOG:0 "보리스 사빈코프가 영도자이다"
 RUS_WRA_ADM3:0 "MTS"
 RUS_WRA_ADM3_desc:0 "The land redistribution promised by Savinkov allowed us to fund many farms in the Central Russia. The next step is to provide our peasants with agricultural machinery. That's why we should establish machine and tractor stations (MTS), to be rural agencies that will supply farms with agricultural machinery and people to run it. Such cooperation will revive the agricultural sector in Russia."
 RUS_WRA_IND1:0 "Korporatsiya Yusupova"
@@ -559,7 +559,7 @@ RUS_WRA_POL2_desc:0 "Because of the civil war in Russia, millions of Russian chi
 RUS_WRA_POL3:0 "나츠그바르디야"
 RUS_WRA_POL3_desc:0 "The Combat Squads of the NRPR helped us to restore order in the country, but now it is the right time to expand the Squads into 'Natsgvardiya' ('National Guard'), which will defend Russia from the various external threats. We are sure, that the professional soldiers of the 'Natsgvardiya' will become an example for the whole Russian Army."
 RUS_WRA_POL4:0 "새로운 러시아"
-RUS_WRA_POL4_desc:0 "보리스 사빈코프는 전 세계가 의식할 강대한 러시아를 건설하겠다고 선언했습니다. 하지만 새로운 국가는 새로운 사회를 필요로 합니다: 용기와 건강, 그리고 노동은 우리의 원칙이 될 것이며, 총통은 이 어려운 시기를 이겨낼 수 있는 국가를 이끌어갈 유일한 인물로서 모두에게 존경받을 것입니다."
+RUS_WRA_POL4_desc:0 "보리스 사빈코프는 전 세계가 의식할 강대한 러시아를 건설하겠다고 선언했습니다. 하지만 새로운 국가는 새로운 사회를 필요로 합니다: 용기와 건강, 그리고 노동은 우리의 원칙이 될 것이며, 영도자는 이 어려운 시기를 이겨낼 수 있는 국가를 이끌어갈 유일한 인물로서 모두에게 존경받을 것입니다."
 
 RUS_stratocrat:0 "군사 정부"
 RUS_stratocrat_desc:0 "The Kerensky governments chronic incapacity to rule proved itself dangerous for Russia. To secure our power proven officers will have to take up important offices of the administration. Only that way we'll enjoy a competent public service."
