--- a/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Nationalist_France_l_english.yml
@@ -24,7 +24,7 @@ NFA_french_in_exile_desc:0 "우리 식민지인 이곳에서 순수 프랑스계
 NFA_political_unrest:0 "정치적 불안정"
 NFA_political_unrest_desc:0 "군사 정부의 최선의 노력에도 불구하고 제 4공화국 국민들의 불만이 높아지고 있습니다. 모리스 쟈냉 수상의 최근 정치적 실수 때문에 페탱 원수는 후임자를 찾아야 했습니다. 그러나 학자들은 그저 총리를 교체하는 것만으로는 국민들을 달래기에 충분하지 않을 것이라는 우려를 제기하고 있습니다. 많은 사람들은 이 불안정함이 프랑스의 미래에 대한 신호라고 믿습니다."
 NFA_anti_parlementarisme:0 "상원 통제"
-NFA_idealized_sovereign:0 "국왕을 지지하다"
+NFA_idealized_sovereign:0 "군주를 지지하다"
 NFA_free_republic:0 "자유 공화국"
 NFA_conservative_republic:0 "반역적인 공화국"
 NFA_free_monarchy:0 "자유적인 군주제"
