--- a/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Companies_l_english.yml
@@ -156,7 +156,7 @@ davie_shipbuilding:0 "데이비 선박회사"
 halifax_shipyard:0 "헬리팩스 조선소"
 canadian_vickers:0 "캐나다 빅커스"
 orenda_engines:0 "오렌다 엔진"
-raac_canada:0 "왕립 아틀란틱 항공"
+raac_canada:0 "왕립 대서양 항공"
 
 ### Combined Syndicates of America ###
 kr_us_steel:0 "US 철강"
