--- a/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
+++ b/Kaiserreich Korean Translation/localisation/KR_Canada_l_english.yml
@@ -125,7 +125,7 @@ IRE_canaid_nav:0 "캐나다 해군 지원"
 IRE_canaid_nav_desc:0 "우리는 캐나다로부터 상당한 양의 해군 지원을 받고 있습니다. 하지만 영국인들이 브리튼 섬으로 돌아가고자 하는 그들의 야망을 숨기지 않기 때문에, 이것이 이타적인 일이 아니라는 것엔 의심의 여지가 없습니다. 한편, 이것은 우리가 사악한 브리튼 연방과 그들의 위협에 맞서도록 도와 줄 것입니다."
 
 ### Flags ###
-CAN_raac_created:0 "왕립 아틀란틱 항공사가 설립되었습니다"
+CAN_raac_created:0 "왕립 대서양 항공사가 설립되었습니다"
 CAN_king_ed:0 "에드워드 8세가 왕위에 오르다."
 CAN_C7_pass:0 "C7 법안이 통과되다."
 CAN_C7_fail:0 "C7 법안이 통과되지 못하다."
@@ -445,7 +445,7 @@ CAN_delhi_investment:0 "인도 투자"
 CAN_delhi_investment_desc:0 "IEDC를 구축한 경우 인도에 투자해야 할 시기가 되었습니다. 인도의 통치권은 제국에 큰 혜택이 될 것이고 그 지역에 있는 우리의 친구들은 원조에 감사할 것입니다."
 CAN_caribbean_investment:0 "서인도 제도 투자"
 CAN_caribbean_investment_desc:0 "IEDC를 구축한 경우 서인도 제도에 투자해야 할 시기가 되었습니다. 서인도 제도를 통치하는 것은 제국에 큰 도움이 될 것이고 그 지역에 있는 우리의 친구들은 원조에 감사할 것입니다."
-CAN_raac:0 "왕립 아틀란틱 항공사"
+CAN_raac:0 "왕립 대서양 항공사"
 CAN_raac_desc:0 "항공 업계 지도자들은 캐나다와 서인도 제도 사이의 정기적인 항공 노선을 구축하기 위해 새로운 회사를 설립하자는 제안을 내놓았습니다. 장거리 수상 비행기의 사용을 통해, 핼리팩스에서 버뮤다, 바하마, 자메이카, 조지 타운까지 정기적인 승객과 화물 수송을 시작하는 것이 제안되었습니다. 그러한 항공 연결은 두 나라를 좀 더 가깝게 해 줄 뿐만 아니라 항공학적 연구와 개발을 촉발시킬 것입니다."
 CAN_imperial_training:0 "제국 항공 훈련 계획"
 CAN_imperial_training_desc:0 "아무리 잘 설계되어도 비행기는 궁극적으로 조종사만큼만 좋을 뿐입니다. 대규모의 전념적인 훈련 프로그램은 우리가 원활한 공급을 확보하는 데 도움이 될 것이며, 협상국의 다른 회원국으로의 확장은 우리가 지식을 모으고 우리가 위대한 수준에 도달하도록 도울 것입니다."
@@ -1299,22 +1299,22 @@ canada.714.t:0 "회의가 끝났다"
 canada.714.d:0 "1936년의 제국 회의는 이제 끝났습니다. 그것이 끝나면, 이제 우리는 그 회의에서 나온 결정들을 실행에 옮기는 데 집중할 수 있습니다. 이 회담이 지배층을 위한 새로운 시대의 시작을 알리고 유대 관계를 강화할 수 있다는 희망이 있지만 시간만이 말해 줄 것입니다."
 canada.714.a:0 "국왕 폐하 만세(God Save the King)"
 
-canada.715.t:0 "왕립 아틀란틱 항공사 창립"
-canada.715.d:0 "캐나다 정부는 장거리 수상 비행기를 통해 우리 나라와 미국 사이의 항공 연결을 구축할 새로운 회사의 설립에 자금을 지원하기로 결정했습니다. 왕립 아틀란틱 항공사인 RAAC는 버뮤다, 안드로스, 자메이카, 조지 타운의 비행장에서 운항하며 승객과 화물을 수송하게 됩니다. 캐나다와 서인도 제도를 더욱 가깝게 만드는 것 외에도, 이것은 의심할 여지 없이 우리 나라에서 항공학적인 연구를 촉발할 것입니다."
+canada.715.t:0 "왕립 대서양 항공사 창립"
+canada.715.d:0 "캐나다 정부는 장거리 수상 비행기를 통해 우리 나라와 미국 사이의 항공 연결을 구축할 새로운 회사의 설립에 자금을 지원하기로 결정했습니다. 왕립 대서양 항공사인 RAAC는 버뮤다, 안드로스, 자메이카, 조지 타운의 비행장에서 운항하며 승객과 화물을 수송하게 됩니다. 캐나다와 서인도 제도를 더욱 가깝게 만드는 것 외에도, 이것은 의심할 여지 없이 우리 나라에서 항공학적인 연구를 촉발할 것입니다."
 canada.715.a:0 "우리는 우리의 캐나다 동맹국들에게 감사한다"
 
 canada.716.t:0 "RAAC가 직면한 재정적 어려움"
-canada.716.d:0 "미국의 여러 파벌 간 계속되는 전쟁은 왕립 아틀란틱 항공사의 승객 수송을 급격히 감소시켰습니다. 그 회사는 영업 적자를 메우기 위해 추가 자금을 필요로 할 것입니다, 그렇지 않으면 파산에 직면할 것입니다."
+canada.716.d:0 "미국의 여러 파벌 간 계속되는 전쟁은 왕립 대서양 항공사의 승객 수송을 급격히 감소시켰습니다. 그 회사는 영업 적자를 메우기 위해 추가 자금을 필요로 할 것입니다, 그렇지 않으면 파산에 직면할 것입니다."
 canada.716.a:0 "자금을 지원하라"
 canada.716.b:0 "아마도 서인도 제도가 도와 줄 수 있을 것이다"
 
 canada.717.t:0 "RAAC가 직면한 재정적 어려움"
-canada.717.d:0 "미국의 여러 파벌 간 계속되는 전쟁은 왕립 아틀란틱 항공사의 승객 수송을 급격히 감소시켰습니다. 그 회사는 영업 적자를 메우기 위해 추가 자금을 필요로 할 것입니다, 그렇지 않으면 파산에 직면할 것입니다. 캐나다 정부는 도움을 거절했고, 그래서 RAAC을 구하는 것은 서인도 제도에 달려 있습니다."
+canada.717.d:0 "미국의 여러 파벌 간 계속되는 전쟁은 왕립 대서양 항공사의 승객 수송을 급격히 감소시켰습니다. 그 회사는 영업 적자를 메우기 위해 추가 자금을 필요로 할 것입니다, 그렇지 않으면 파산에 직면할 것입니다. 캐나다 정부는 도움을 거절했고, 그래서 RAAC을 구하는 것은 서인도 제도에 달려 있습니다."
 canada.717.a:0 "자금을 지원하라"
 canada.717.b:0 "RAAC는 파산할 것이다"
 
 canada.718.t:0 "RAAC 파산"
-canada.718.d:0 "왕립 아틀란틱 항공사는 미국의 내전과 캐나다와 서인도 제도 둘 다 그것을 지지하지 않는다는 사실 때문에 파산했습니다."
+canada.718.d:0 "왕립 대서양 항공사는 미국의 내전과 캐나다와 서인도 제도 둘 다 그것을 지지하지 않는다는 사실 때문에 파산했습니다."
 canada.718.a:0 "젠장."
 
 canada.719.t:0 "인도 경제에 대한 IEDC 투자"
